Updates MacOS poetry installation steps

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,7 +127,7 @@ jobs:
 
       - name: Install poetry
         run: |
-          python3 -m pip install poetry
+          curl -sSL https://install.python-poetry.org | python3 -
 
       - name: Restore cache - poetry
         uses: actions/cache@v3
@@ -138,7 +138,7 @@ jobs:
       - name: Install poetry dependencies
         run: |
           cd desktop
-          /Library/Frameworks/Python.framework/Versions/3.11/bin/poetry install
+          ~/Library/Application\ Support/pypoetry/venv/bin/poetry install
 
       - name: Restore cache - tor
         uses: actions/cache@v3
@@ -149,7 +149,7 @@ jobs:
       - name: Get tor binaries from Tor Browser
         run: |
           cd desktop
-          /Library/Frameworks/Python.framework/Versions/3.11/bin/poetry run python ./scripts/get-tor.py macos
+          ~/Library/Application\ Support/pypoetry/venv/bin/poetry run python ./scripts/get-tor.py macos
 
       - name: Install Go >=1.21.1
         uses: actions/setup-go@v4
@@ -215,10 +215,10 @@ jobs:
       - name: Build OnionShare
         run: |
           cd desktop
-          /Library/Frameworks/Python.framework/Versions/3.11/bin/poetry run python ./setup-freeze.py bdist_mac
+          ~/Library/Application\ Support/pypoetry/venv/bin/poetry run python ./setup-freeze.py bdist_mac
           rm -rf build/OnionShare.app/Contents/Resources/lib
           mv build/exe.macosx-10.9-universal2-3.11/lib build/OnionShare.app/Contents/Resources/
-          /Library/Frameworks/Python.framework/Versions/3.11/bin/poetry run python ./scripts/build-macos.py cleanup-build
+          ~/Library/Application\ Support/pypoetry/venv/bin/poetry run python ./scripts/build-macos.py cleanup-build
 
       - name: Compress
         run: |
