--- a/desktop/pyproject.toml
+++ b/desktop/pyproject.toml
@@ -10,7 +10,7 @@ python = ">=3.10,<3.13"
 onionshare_cli = {path = "../cli", develop = true}
 PySide6 = "6.8.2"
 qrcode = "*"
-werkzeug = "*"
+werkzeug = "3.0.6"
 python-gnupg = "*"
 setuptools = "*"
 
