--- a/flatpak/org.onionshare.OnionShare.yaml
+++ b/flatpak/org.onionshare.OnionShare.yaml
@@ -70,11 +70,11 @@ modules:
       - type: git
         url: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/meek
         commit: 3be00b7bb1fe57b795149b5eaa579c15ef039d93
-        dest: src/git.torproject.org/pluggable-transports/meek.git
+        dest: src/git.torproject.org/pluggable-transports/meek
       - commit: 781a46c66d2ddbc3509354ae7f1fccab74cb9927
         dest: src/git.torproject.org/pluggable-transports/goptlib
         type: git
-        url: https://git.torproject.org/pluggable-transports/goptlib.git
+        url: https://git.torproject.org/pluggable-transports/goptlib
       - commit: 1d750214c25205863625bb3eb8190a51b2cef26d
         dest: src/github.com/andybalholm/brotli
         type: git
@@ -117,12 +117,12 @@ modules:
       env:
         GOBIN: "/app/bin/"
     build-commands:
-      - ". /usr/lib/sdk/golang/enable.sh; export GOPATH=$PWD; export GO111MODULE=off; go install gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake.git/snowflake.git"
+      - ". /usr/lib/sdk/golang/enable.sh; export GOPATH=$PWD; export GO111MODULE=off; go install gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake.git/snowflake"
     sources:
       - type: git
         url: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake
         commit: 8b2e12c96d4a924409ba13910af2412ffbc042fc
-        dest: src/git.torproject.org/pluggable-transports/snowflake.git
+        dest: src/git.torproject.org/pluggable-transports/snowflake
       - commit: 64a2037ec6be8a4b0c1d1f706ed35b428b989239
         dest: src/cloud.google.com/go
         type: git
@@ -658,15 +658,15 @@ modules:
       - commit: 10cb98267c6cb43ea9cd6793f29ff4089c306974
         dest: src/gopkg.in/check/v1
         type: git
-        url: https://gopkg.in/check.v1.git
+        url: https://gopkg.in/check.v1
       - commit: 7649d4548cb53a614db133b2a8ac1f31859dda8c
         dest: src/gopkg.in/yaml/v2
         type: git
-        url: https://gopkg.in/yaml.v2.git
+        url: https://gopkg.in/yaml.v2
       - commit: f6f7691b1fdeb513f56608cd2c32c51f8194bf51
         dest: src/gopkg.in/yaml/v3
         type: git
-        url: https://gopkg.in/yaml.v3.git
+        url: https://gopkg.in/yaml.v3
       - commit: ea95bdfd59fc14c1c9afa08716e0cd013eae4e12
         dest: src/honnef.co/go/tools
         type: git
@@ -677,12 +677,12 @@ modules:
       env:
         GOBIN: "/app/bin/"
     build-commands:
-      - ". /usr/lib/sdk/golang/enable.sh; export GOPATH=$PWD; export GO111MODULE=off; go install gitlab.com/yawning/obfs4.git/obfs4.git"
+      - ". /usr/lib/sdk/golang/enable.sh; export GOPATH=$PWD; export GO111MODULE=off; go install gitlab.com/yawning/obfs4.git/obfs4"
     sources:
       - type: git
         url: https://gitlab.com/yawning/obfs4
         commit: 336a71d6e4cfd2d33e9c57797828007ad74975e9
-        dest: src/gitlab.com/yawning/obfs4.git
+        dest: src/gitlab.com/yawning/obfs4
       - commit: eef06506605bda0b7e5f3ac997542150a13c22a2
         dest: src/filippo.io/edwards25519
         type: git
@@ -690,7 +690,7 @@ modules:
       - commit: 15f83653abbcced9003c96cc14edc5b2f82e0e0e
         dest: src/git.torproject.org/pluggable-transports/goptlib
         type: git
-        url: https://git.torproject.org/pluggable-transports/goptlib.git
+        url: https://git.torproject.org/pluggable-transports/goptlib
       - commit: 34f201214d993633bb24f418ba11736ab8b55aa7
         dest: src/github.com/dchest/siphash
         type: git
@@ -698,7 +698,7 @@ modules:
       - commit: 2f91fcc9fbdb888f3c795849b6777940135559b7
         dest: src/gitlab.com/yawning/edwards25519-extra
         type: git
-        url: https://gitlab.com/yawning/edwards25519-extra.git
+        url: https://gitlab.com/yawning/edwards25519-extra
       - commit: a769d52b0f97a420f3dcafc17f8b3384217859a2
         dest: src/golang.org/x/crypto
         type: git
