--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -287,7 +287,7 @@ jobs:
           sudo ufw disable
 
       - name: Build snap
-        run: sudo snapcraft
+        run: sudo snapcraft --verbosity debug
 
       - name: Compress lxd directory and set proper permissions
         run: |
