--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: onionshare
-base: core24
+base: core22
 version: "2.6.2"
 summary: Securely and anonymously share files, host websites, and chat using Tor
 description: |
@@ -49,21 +49,14 @@ apps:
 parts:
   onionshare-cli:
     source: ./cli
-    plugin: python
-    build-packages:
-      - python3-poetry
-    build-environment:
-      - PATH: /usr/bin:$PATH
-      - PYTHONPATH: ""
+    plugin: poetry
+    after: [tor, obfs4, snowflake-client, meek-client]
     override-pull: |
       craftctl default
-    after: [tor, obfs4, snowflake-client, meek-client]
-    override-build: |
-      poetry install
 
   onionshare:
     source: ./desktop
-    plugin: python
+    plugin: poetry
     build-packages:
       - build-essential
       - libssl-dev
@@ -146,10 +139,6 @@ parts:
       - libxkbfile1
     override-pull: |
       craftctl default
-    override-build: |
-      poetry install
-      sed -i 's|'$CRAFT_PART_INSTALL'/bin/python3|/usr/bin/env python3|g' $CRAFT_PART_INSTALL/bin/onionshare
-      sed -i 's|'$CRAFT_PART_INSTALL'/bin/python3|/usr/bin/env python3|g' $CRAFT_PART_INSTALL/bin/onionshare-cli
     after: [onionshare-cli]
 
   tor:
