--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -63,6 +63,7 @@ parts:
       - libffi-dev
       - python3-dev
       - python3-pip
+      - python3-poetry
       - rustc
       - cargo
     build-environment:
