--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -49,17 +49,11 @@ apps:
 parts:
   onionshare-cli:
     source: ./cli
-    plugin: python
-    build-packages:
-      - python3-poetry
-    build-environment:
-      - PATH: /usr/bin:$PATH
-      - PYTHONPATH: ""
+    plugin: nil
     override-pull: |
       craftctl default
+      rm pyproject.toml poetry.lock
     after: [tor, obfs4, snowflake-client, meek-client]
-    override-build: |
-      poetry install
 
   onionshare:
     source: ./desktop
@@ -70,7 +64,6 @@ parts:
       - libffi-dev
       - python3-dev
       - python3-pip
-      - python3-poetry
       - rustc
       - cargo
     build-environment:
@@ -146,8 +139,39 @@ parts:
       - libxkbfile1
     override-pull: |
       craftctl default
+      rm pyproject.toml poetry.lock
+      cat > requirements.txt << EOF
+      # onionshare_cli
+      click
+      flask==2.3.2
+      flask-compress==1.13
+      flask-socketio==5.3.4
+      psutil
+      pysocks
+      requests[socks]
+      unidecode
+      urllib3
+      eventlet
+      setuptools
+      pynacl
+      colorama
+      gevent-websocket
+      stem==1.8.1
+      waitress
+      werkzeug==2.3.4
+      # onionshare
+      PySide6==6.5.2
+      qrcode
+      packaging
+      EOF
     override-build: |
-      poetry install
+      python3 -m venv $CRAFT_PART_INSTALL
+      . $CRAFT_PART_INSTALL/bin/activate
+      pip install -U pip setuptools wheel
+      pip install -U -r requirements.txt
+      pip install -U ../../onionshare-cli/src
+      pip install -U .
+      deactivate
       sed -i 's|'$CRAFT_PART_INSTALL'/bin/python3|/usr/bin/env python3|g' $CRAFT_PART_INSTALL/bin/onionshare
       sed -i 's|'$CRAFT_PART_INSTALL'/bin/python3|/usr/bin/env python3|g' $CRAFT_PART_INSTALL/bin/onionshare-cli
     after: [onionshare-cli]
