--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: onionshare
-base: core24
+base: core22
 version: "2.6.2"
 summary: Securely and anonymously share files, host websites, and chat using Tor
 description: |
@@ -11,11 +11,11 @@ description: |
 grade: stable # stable or devel
 confinement: strict
 
-platforms:
-  i386:
-  amd64:
-  arm64:
-  armhf:
+architectures:
+  - build-on: i386
+  - build-on: amd64
+  - build-on: arm64
+  - build-on: armhf
 
 apps:
   onionshare:
@@ -56,9 +56,7 @@ parts:
       craftctl default
     override-build: |
       python3 -m venv $CRAFT_PART_INSTALL
-      . $CRAFT_PART_INSTALL/bin/activate
-      poetry install
-      deactivate
+      pip install -r cli-requirements.txt
     after: [tor, obfs4, snowflake-client, meek-client]
 
   onionshare:
@@ -70,7 +68,6 @@ parts:
       - libffi-dev
       - python3-dev
       - python3-pip
-      - python3-poetry
       - rustc
       - cargo
     build-environment:
@@ -149,8 +146,10 @@ parts:
     override-build: |
       python3 -m venv $CRAFT_PART_INSTALL
       . $CRAFT_PART_INSTALL/bin/activate
-      poetry install
+      pip install -r desktop-requirements.txt
       deactivate
+      sed -i 's|'$CRAFT_PART_INSTALL'/bin/python3|/usr/bin/env python3|g' $CRAFT_PART_INSTALL/bin/onionshare
+      sed -i 's|'$CRAFT_PART_INSTALL'/bin/python3|/usr/bin/env python3|g' $CRAFT_PART_INSTALL/bin/onionshare-cli
     after: [onionshare-cli]
 
   tor:
